--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
+<!--
+.......................我佛慈悲.......................
+                       _oo0oo_
+                      o8888888o
+                      88" . "88
+                      (| -_- |)
+                      0\  =  /0
+                    ___/`---'\___
+                  .' \\|     |// '.
+                 / \\|||  :  |||// \
+                / _||||| -卍-|||||- \
+               |   | \\\  -  /// |   |
+               | \_|  ''\---/''  |_/ |
+               \  .-\__  '-'  ___/-. /
+             ___'. .'  /--.--\  `. .'___
+          ."" '<  `.___\_<|>_/___.' >' "".
+         | | :  `- \`.;`\ _ /`;.`/ - ` : | |
+         \  \ `_.   \_ __\ /__ _/   .-` /  /
+     =====`-.____`.___ \_____/___.-`___.-'=====
+                       `=---='
+..................佛祖开光 ,永无BUG...................
+                 ,-╮／﹋    "~ヽ╭-﹑
+                ╰／   ︵︿︵     ヽ╯
+                /  ／◤▋█◥◣＼  \\
+               {  /▃▃    ▃▃ \\   }
+                ㄟ"'   ε    "',  ／
+                   ~︶~︶  ~~︶~
+-->
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,7 +33,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>VueVip</title>
   <link rel="stylesheet" href="./static/css/style.css">
   <link rel="stylesheet" href="./static/css/reset.css">
 </head>
