--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="./static/css/reset.css">
 </head>
 <body>
-<div id="app"></div>
+<div id="app">apppppppppppp</div>
 </body>
 </html>
